--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.31",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.1.5",
     "tailwindcss": "^3.3.5",
     "vite": "^5.1.4"
   }
